--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -44,4 +44,4 @@ server.ssl.key-store-type=PKCS12
 razorpay.key.id=rzp_test_21ME8BDB1Ey67B
 razorpay.key.secret=dmba9pGxROTjqcssS1cUjCdW
 
-spring.profiles.active=${ENV:dev}
+spring.profiles.active=dev
