--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -4,7 +4,7 @@ server.port=8081
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #mysql local db
-spring.datasource.url=jdbc:mysql://roundhouse.proxy.rlwy.net:56691/full-stack-ecommerce?useSSL=false&useUnicode=yes&characterEncoding=UTF-8&allowPublicKeyRetrieval=true&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://roundhouse.proxy.rlwy.net:56691/full-stack-ecommerce?useSSL=true&useUnicode=yes&characterEncoding=UTF-8&allowPublicKeyRetrieval=true&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=bCRpZQbZMgnLiTeadPbOVsVKvAcMRkQi
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
