--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -27,19 +27,19 @@ okta.oauth2.issuer=https://dev-78565656.okta.com/oauth2/default
 #####
 
 # Enable HTTPS support for localhost (only accept HTTPS requests)
-#server.ssl.enabled=true
+server.ssl.enabled=true
 
 # Alias that identifies the key in the key store
-#server.ssl.key-alias=luv2code
+server.ssl.key-alias=luv2code
 
 # Keystore location
-#server.ssl.key-store=classpath:ecommerce-keystore.p12
+server.ssl.key-store=classpath:ecommerce-keystore.p12
 
 # Keystore password
-#server.ssl.key-store-password=secret
+server.ssl.key-store-password=secret
 
 # Keystore format
-#server.ssl.key-store-type=PKCS12
+server.ssl.key-store-type=PKCS12
 
 #RazorPay client id and secret
 razorpay.key.id=rzp_test_21ME8BDB1Ey67B
