--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -4,7 +4,7 @@ server.port=8081
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #mysql local db
-spring.datasource.url=jdbc:mysql://roundhouse.proxy.rlwy.net:56691/full-stack-ecommerce?useSSL=true&useUnicode=yes&characterEncoding=UTF-8&allowPublicKeyRetrieval=true&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://roundhouse.proxy.rlwy.net:56691/full-stack-ecommerce?useSSL=false&useUnicode=yes&characterEncoding=UTF-8&allowPublicKeyRetrieval=true&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=bCRpZQbZMgnLiTeadPbOVsVKvAcMRkQi
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
@@ -27,19 +27,19 @@ okta.oauth2.issuer=https://dev-78565656.okta.com/oauth2/default
 #####
 
 # Enable HTTPS support for localhost (only accept HTTPS requests)
-server.ssl.enabled=true
+server.ssl.enabled=false
 
 # Alias that identifies the key in the key store
-server.ssl.key-alias=luv2code
+#server.ssl.key-alias=luv2code
 
 # Keystore location
-server.ssl.key-store=classpath:ecommerce-keystore.p12
+#server.ssl.key-store=classpath:ecommerce-keystore.p12
 
 # Keystore password
-server.ssl.key-store-password=secret
+#server.ssl.key-store-password=secret
 
 # Keystore format
-server.ssl.key-store-type=PKCS12
+#server.ssl.key-store-type=PKCS12
 
 #RazorPay client id and secret
 razorpay.key.id=rzp_test_21ME8BDB1Ey67B
