--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -12,7 +12,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 
 spring.data.rest.base-path=/api
-allowed.origins=https://bhumikasaini1999.github.io/full-stack-app-frontend/
+allowed.origins=https://bhumikasaini1999.github.io
 
 #it will only expose those REST API's that is annotated with @RepositoryRestResource annotation
 spring.data.rest.detection-strategy=ANNOTATED
